[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

[metadata]
name = yabs
version = attr: yabs.__version__
author = Martin Wendt
author_email = yabs@wwwendt.de
maintainer = Martin Wendt
maintainer_email = yabs@wwwendt.de
url = https://github.com/mar10/yabs/
# download_url =
description = Yet Another Build Script
long_description = file: README.md
long_description_content_type = text/markdown
keywords = build, setup, ci, workflow, automation
license = MIT
license_file = LICENSE
# project_urls	 	dict	38.3.0
# platforms 	list-comma
# provides	 	list-comma
# requires	 	list-comma
# obsoletes	 	list-comma
classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    GitPython
    PyGithub
    PyYAML
    semantic_version
    setuptools
    snazzy
    toml
    twine
    wheel

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = yabs
include_package_data = True
exclude =
    tests

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    yabs = yabs.cli:run
